--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/product-preview-card-component-main/style.css">
+  <link rel="stylesheet" href="/style.css">
   
   <title>Frontend Mentor | Product preview card component</title>
 </head>
@@ -13,7 +13,7 @@
   <div class="con">
     <div class="grid">
     <div class="card">
-      <img src="/product-preview-card-component-main/images/image-product-desktop.jpg" alt="" >
+      <img src="/images/image-product-desktop.jpg" alt="" >
     </div>
       <div class="dis">
         <h2>Perfume</h2>
@@ -24,7 +24,7 @@
         <p class="np">$149.99 </p>
         <p class="op">$169.99 </p>
       </div>
-       <button class="cart"><img src="/product-preview-card-component-main/images/icon-cart.svg" alt="icon-cart">Add to Cart</button>   
+       <button class="cart"><img src="/images/icon-cart.svg" alt="icon-cart">Add to Cart</button>   
       </div>
     </div>
   </div>
