--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
       <div class="dis">
         <h2>Perfume</h2>
-        <h1 class="hh">Gbrielle <br> Essence Eau <br> De Parfum </h1>
-        <p class="detail">A floral, solar and voluptuous <br>interpretation composed by <br>Olivier Polge, 
-          Perfumer-Creator <br>for the House of CHANEL.</p>
+        <h1 class="hh">Gbrielle Essence Eau De Parfum </h1>
+        <p class="detail">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.</p>
       <div class="price">
         <p class="np">$149.99 </p>
         <p class="op">$169.99 </p>
